navbar added succesfully

--- a/index.html
+++ b/index.html
@@ -23,6 +23,27 @@
     <!-- Header Part -->
     <header id="header">
         <!-- Navbar  -->
+        <div class="container">
+            <nav class="navbar">
+                <div class="nav-logo">
+                    <a href="">
+                        <img src="images/Frame.png" alt="">
+                        <h2>Gamer<span>Zone</span></h2>
+                    </a>
+                </div>
+                <div class="nav-menu">
+                    <ul class="nav-menu-wraper">
+                        <li><a href="">About Us </a></li>
+                        <li><a href="">Developers</a></li>
+                        <ul class="follow-menu">
+                            <p>Follow Us On</p>
+                            <a class="youtube" href=""><i class="fa-brands fa-youtube"></i></a>
+                            <a class="tiktok" href=""><i class="fa-brands fa-tiktok"></i></a>
+                        </ul>
+                    </ul>
+                </div>
+            </nav>
+        </div>
 
     </header>
     <!-- Main Section -->
