banner section created

--- a/index.html
+++ b/index.html
@@ -43,6 +43,25 @@
                     </ul>
                 </div>
             </nav>
+            <!-- Banner Part -->
+            <div class="banner">
+                <div class="banner-content">
+                    <h2>PLAY LIKE THE</h2>
+                    <h1>G.O.A.T.</h1>
+                    <div class="icon-list">
+                        <p><i class="fa fa-circle-play"></i>1-Click instant play</p>
+                        <p><i class="fa fa-download"></i>No Download</p>
+                        <p><i class="fa fa-users"></i>1000s of supported online games</p>
+                    </div>
+                    <div class="banner-button">
+                        <button class="primary-btn">Sign in</button>
+                        <button class="secondary-btn">go rogue</button>
+                    </div>
+                </div>
+                <div class="banner-img">
+                    <img src="images/Group 18.png" alt="">
+                </div>
+            </div>
         </div>
 
     </header>
