--- a/index.html
+++ b/index.html
@@ -66,7 +66,83 @@
 
     </header>
     <!-- Main Section -->
-    <main></main>
+    <main>
+        <section class="teams">
+            <div class="container">
+                <div class="teams-part">
+                    <div class="team-img">
+                        <img src="images/pngwing 4.png" alt="">
+                    </div>
+                    <div class="team-content">
+                        <h2><span>We are Gamer</span></h2>
+                        <p>An international digital games and entertainment company. We develop, publish and distribute
+                            multiplayer mobile games. We reach over 400 million players each month and our audience
+                            keeps growing.</p>
+                        <button class="primary-btn">Know More</button>
+                        <div class="team-qoutes">
+                            <p>Our Purpoese.....</p>
+                            <h3>“unleash the gamer in everyone”</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Video Video Part -->
+        <section class="video">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Online GAmes <span>Funny Videos</span></h2>
+                    <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+                </div>
+                <div class="video-card-container">
+                    <div class="video-card-items">
+                        <div class="video-card">
+                            <img src="images/Rectangle 4.png" alt="Cartoon" class="image" />
+                            <div class="overlay">
+                                <a href="#" class="icon" title="User Profile">
+                                    <i class="fa fa-circle-play"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <p class="vide-card-text"> No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="video-card-items">
+                        <div class="video-card">
+                            <img src="images/Rectangle 5.png" alt="Cartoon" class="image" />
+                            <div class="overlay">
+                                <a href="#" class="icon" title="User Profile">
+                                    <i class="fa fa-circle-play"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <p class="vide-card-text">Did you score? #unblockedgames #school</p>
+                    </div>
+                    <div class="video-card-items">
+                        <div class="video-card">
+                            <img src="images/Rectangle 6.png" alt="Cartoon" class="image" />
+                            <div class="overlay">
+                                <a href="#" class="icon" title="User Profile">
+                                    <i class="fa fa-circle-play"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <p class="vide-card-text">Breaking game records like OG.</p>
+                    </div>
+                    <div class="video-card-items">
+                        <div class="video-card">
+                            <img src="images/Rectangle 7.png" alt="Cartoon" class="image" />
+                            <div class="overlay">
+                                <a href="#" class="icon" title="User Profile">
+                                    <i class="fa fa-circle-play"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <p class="vide-card-text">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- Footer Part -->
     <footer></footer>
 </body>
