feature part completed

--- a/index.html
+++ b/index.html
@@ -143,6 +143,26 @@
             </div>
         </section>
     </main>
+    <!-- Feature part -->
+    <section>
+        <div class="container">
+            <div class="feature-part">
+                <div class="feature-part-content">
+                    <h2><span>Play Instantly,</span> No Downloads No Insalls</h2>
+                    <p>
+                        Play games online for free without downloading. Just click the
+                        Play button and play instantly in your browser.
+                    </p>
+                </div>
+                <div class="feature-img">
+                    <img src="images//Rectangle 55.png" alt="">
+                    <div class="feature-img-2">
+                        <img src="images/Rectangle 66.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Footer Part -->
     <footer></footer>
 </body>
