top game part added

--- a/index.html
+++ b/index.html
@@ -163,6 +163,50 @@
             </div>
         </div>
     </section>
+    <hr>
+    <!-- Top Games -->
+    <section>
+        <div class="container">
+            <div class="top-games">
+                <div class="top-game-item">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <a href="">Action Gamse</a>
+                </div>
+                <div class="top-game-item">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <a href="">Action Gamse</a>
+                </div>
+                <div class="top-game-item">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <a href="">Action Gamse</a>
+                </div>
+                <div class="top-game-item">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <a href="">Action Gamse</a>
+                </div>
+                <div class="top-game-item">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <a href="">Action Gamse</a>
+                </div>
+                <div class="top-game-item">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <a href="">Action Gamse</a>
+                </div>
+                <div class="top-game-item">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <a href="">Action Gamse</a>
+                </div>
+                <div class="top-game-item">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <a href="">Action Gamse</a>
+                </div>
+                <div class="top-game-item">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <a href="">Action Gamse</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Footer Part -->
     <footer></footer>
 </body>
