footer part completed

--- a/index.html
+++ b/index.html
@@ -208,7 +208,44 @@
         </div>
     </section>
     <!-- Footer Part -->
-    <footer></footer>
+    <footer id="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <a href="">
+                        <img src="images/Frame.png" alt="">
+                        <h2>Gamer<span>Zone</span></h2>
+                    </a>
+                </div>
+                <div class="footer-nav">
+                    <ul class="footer-nav-items">
+                        <li><a href="">Our Story </a></li>
+                        <li><a href="">Games</a></li>
+                        <li><a href="">Web Games</a></li>
+                        <li><a href="">Careers</a></li>
+                        <li><a href="">Supprt</a></li>
+                        <li><a href="">My Account</a></li>
+                    </ul>
+                    <div class="footer-icons">
+                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-youtube"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-apple"></i></a>
+                    </div>
+                    <ul class="footer-policy-nav">
+                        <li><a href="">Terms And Conditions </a></li>
+                        <li><a href="">Privacy Policy </a></li>
+                        <li><a href="">Cookie Policy </a></li>
+                        <li><a href="">Privacy Setting</a></li>
+                    </ul>
+                </div>
+                <hr>
+                <p class="footer-text"><small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small></p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
