--- a/index.html
+++ b/index.html
@@ -173,36 +173,36 @@
                     <a href="">Action Gamse</a>
                 </div>
                 <div class="top-game-item">
-                    <img src="images/Rectangle 11.png" alt="">
+                    <img src="images/Rectangle 14.png" alt="">
+                    <a href="">Strategy Games</a>
+                </div>
+                <div class="top-game-item">
+                    <img src="images/Rectangle 12.png" alt="">
                     <a href="">Action Gamse</a>
                 </div>
                 <div class="top-game-item">
-                    <img src="images/Rectangle 11.png" alt="">
-                    <a href="">Action Gamse</a>
+                    <img src="images/Rectangle 13.png" alt="">
+                    <a href="">Adventure Games</a>
                 </div>
                 <div class="top-game-item">
-                    <img src="images/Rectangle 11.png" alt="">
-                    <a href="">Action Gamse</a>
+                    <img src="images/Rectangle 14.png" alt="">
+                    <a href="">Arcade Games</a>
                 </div>
                 <div class="top-game-item">
-                    <img src="images/Rectangle 11.png" alt="">
-                    <a href="">Action Gamse</a>
+                    <img src="images/Rectangle 15.png" alt="">
+                    <a href="">Educational Games</a>
                 </div>
                 <div class="top-game-item">
-                    <img src="images/Rectangle 11.png" alt="">
-                    <a href="">Action Gamse</a>
+                    <img src="images/Rectangle 16.png" alt="">
+                    <a href="">Word Games</a>
                 </div>
                 <div class="top-game-item">
-                    <img src="images/Rectangle 11.png" alt="">
-                    <a href="">Action Gamse</a>
+                    <img src="images/Rectangle 17.png" alt="">
+                    <a href="">Music & Audio Games</a>
                 </div>
                 <div class="top-game-item">
-                    <img src="images/Rectangle 11.png" alt="">
-                    <a href="">Action Gamse</a>
-                </div>
-                <div class="top-game-item">
-                    <img src="images/Rectangle 11.png" alt="">
-                    <a href="">Action Gamse</a>
+                    <img src="images/Rectangle 19.png" alt="">
+                    <a href="">Puzzle Games</a>
                 </div>
             </div>
         </div>
